<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <!-- ScrollView pro celý obsah -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BGblue"
        android:fillViewport="true"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topHeader"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintHeight_percent="0.15">


                <!-- Logo na levé straně -->
                <!-- Tlačítko pro navbar na pravé straně -->

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:contentDescription="@string/logo_navbar"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50" />

                <Button
                    android:id="@+id/navButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/baseline_menu_24"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <!-- Navbar (skrytý nebo zobrazený při kliknutí na tlačítko) -->
            <LinearLayout
                android:id="@+id/navbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/BGblue"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"> <!-- Navbar skrytý na začátku -->

                <!-- Ikony pro navbar -->


                <ImageView
                    android:id="@+id/profile_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/icon_profile"
                    android:src="@drawable/profile" />

                <ImageView
                    android:id="@+id/events"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/icon_events"
                    android:src="@drawable/calendar" />
                <ImageView
                    android:id="@+id/eventsTools"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:visibility="visible"
                    android:src="@drawable/baseline_edit_calendar_24"
                    />

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/icon_logout"
                    android:src="@drawable/baseline_logout_24" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/profileActivities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.example.litomicisystem.fragments.IntroScreen"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
