<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGblue"
    tools:context=".fragments.Profile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/profile_Headline"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alignmentMode="alignMargins"
        android:background="@drawable/rounded_corner_white"
        android:columnCount="5"
        android:padding="10dp"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/contact_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_columnSpan="4"
            android:text="Kontaktní údaje:"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <!-- Street na celý řádek -->
        <EditText
            android:id="@+id/street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:enabled="false"
            android:gravity="center"
            android:text="hříšná ulice 154/5"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!-- City a PSC na jednom řádku v poměru 3:1 -->
        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:enabled="false"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/psc"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:enabled="false"
            android:gravity="center"
            android:text="41236"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:enabled="false"
            android:gravity="center"
            android:text="+420 502 221 336"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/mail"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:enabled="false"
            android:gravity="center"
            android:text="jmeno.prijmeni@gmail.com"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_columnSpan="4"
            android:layout_gravity="fill" />
    </GridLayout>

    <Button
        android:id="@+id/chaDataBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/change_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

    </Button>

    <Button
        android:id="@+id/saveNewData"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Save_data"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

    </Button>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/member_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corner_white"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chaDataBTN" />

    <Button
        android:id="@+id/add_log"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Přidat přístup"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member_list">

    </Button>

    <Button
        android:id="@+id/add_new_member"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Nový člen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member_list">

    </Button>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_member_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:visibility="gone"
        android:background="@drawable/rounded_corner_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_member"
        app:layout_constraintVertical_bias="0.527">

        <TextView
            android:id="@+id/NM_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nový člen:"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/NM_name"
            android:layout_margin="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="Jméno"
            android:enabled="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/NM_lastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NM_header" />

        <EditText
            android:id="@+id/NM_lastname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="Příjmení"
            android:enabled="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NM_header" />

        <TextView
            android:id="@+id/NM_born_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Datum Narození:"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/NM_born"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NM_name" />

        <EditText
            android:id="@+id/NM_born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:ems="10"
            android:enabled="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:inputType="none"
            android:padding="10dp"
            android:text="01/01/2025"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/NM_born_header"
            app:layout_constraintTop_toBottomOf="@+id/NM_lastname" />

        <EditText
            android:id="@+id/NM_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:enabled="true"
            android:layout_margin="15dp"
            android:text="Zdravotní problémy:\nžádné nemá"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NM_born" />

        <CheckBox
            android:id="@+id/NM_GDPR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Souhlasím s pořiováním fotografie mé osoby, pro veškeré propagační materiály, jak v tištěné, tak v elektronické podobě (např. webové
    stránky, FB, tiskoviny). Taková fotografie může být změněna, použita jako součást díla souborného nebo může být
použita pouze její část."
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NM_health" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/NM_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_member_form"
        >

        <Button
            android:id="@+id/NM_cancle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="Zrušit" />

        <Button
            android:id="@+id/NM_saver"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Vytvořit člena" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NL_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:visibility="gone"
        android:background="@drawable/rounded_corner_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_log"
>

        <EditText
            android:id="@+id/NL_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="mail@mail.com"
            android:textColor="@color/black"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/NL_psswd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="Znovu heslo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NL_psswd1" />

        <EditText
            android:id="@+id/NL_psswd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="Heslo"
            android:textColor="@color/black"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NL_mail" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Přidělení přístupu k účtu"
            android:textSize="25sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Přihlašovací email"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/NL_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Vaše heslo"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/NL_psswd1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="Potvrzení Hesla"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/NL_psswd2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/NL_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zrušit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/NL_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Přidělit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NL_psswd2" />
    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.constraintlayout.widget.ConstraintLayout>